[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/GUI/HoverUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/ui_theme.tres" type="Theme" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends VBoxContainer

onready var Name = $Name
onready var Value = $HBoxContainer/Value
onready var Stage = $HBoxContainer/Stage

func set_name(n):
	Name.text = str(n)

func set_value(v):
	Value.text = \"$\" + str(v)

func set_stage(s):
	Stage.text = \"Growth: \" + str(s)
"

[sub_resource type="GDScript" id=2]
script/source = "extends VBoxContainer

func set_item_name(var n: String, var p: int):
	var state = Global.gamelog[\"states\"][Global.current_turn]
	
	var p_name = \"Player %d\" % p
	match p:
		1: p_name = state[\"p1\"][\"name\"]
		2: p_name = state[\"p2\"][\"name\"]
	 
	$Name.text = \"%s's %s\" % [p_name, n]


func set_description(var n: String):
	$Description.text = n
"

[sub_resource type="Animation" id=3]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Node2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.220378, 1.59651, 1, -0.60358, 0.0277927, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/HBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Node2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.515086, 0.493298, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.00130401, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/HBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="HoverUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D"]
anchor_right = 1.0
margin_bottom = 46.0
mouse_filter = 2
theme = ExtResource( 2 )
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CropPanel" type="PanelContainer" parent="Node2D/HBoxContainer"]
margin_right = 58.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Node2D/HBoxContainer/CropPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 54.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="CropInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/CropPanel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 49.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = SubResource( 1 )

[node name="Name" type="Label" parent="Node2D/HBoxContainer/CropPanel/MarginContainer/CropInfo"]
margin_right = 44.0
margin_bottom = 19.0
text = "Crop"

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/HBoxContainer/CropPanel/MarginContainer/CropInfo"]
margin_top = 23.0
margin_right = 44.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/separation = 25

[node name="Value" type="Label" parent="Node2D/HBoxContainer/CropPanel/MarginContainer/CropInfo/HBoxContainer"]
margin_right = 9.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "$"

[node name="Stage" type="Label" parent="Node2D/HBoxContainer/CropPanel/MarginContainer/CropInfo/HBoxContainer"]
margin_left = 34.0
margin_right = 44.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "#"

[node name="ItemPanel" type="PanelContainer" parent="Node2D/HBoxContainer"]
margin_left = 66.0
margin_right = 122.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Node2D/HBoxContainer/ItemPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 100.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 93.0

[node name="P1ItemInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer/VBoxContainer"]
margin_right = 42.0
margin_bottom = 42.0
mouse_filter = 2
script = SubResource( 2 )

[node name="Name" type="Label" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer/VBoxContainer/P1ItemInfo"]
margin_right = 42.0
margin_bottom = 19.0
text = "Name"

[node name="Description" type="Label" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer/VBoxContainer/P1ItemInfo"]
margin_top = 23.0
margin_right = 42.0
margin_bottom = 42.0
text = "desc"
autowrap = true

[node name="P2ItemInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 42.0
margin_bottom = 88.0
mouse_filter = 2
script = SubResource( 2 )

[node name="Name" type="Label" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer/VBoxContainer/P2ItemInfo"]
margin_right = 42.0
margin_bottom = 19.0
text = "Name"

[node name="Description" type="Label" parent="Node2D/HBoxContainer/ItemPanel/MarginContainer/VBoxContainer/P2ItemInfo"]
margin_top = 23.0
margin_right = 42.0
margin_bottom = 42.0
text = "Desc."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 3 )
anims/Exit = SubResource( 4 )

[connection signal="resized" from="Node2D/HBoxContainer/CropPanel" to="." method="_on_PanelContainer_resized"]
[connection signal="resized" from="Node2D/HBoxContainer/ItemPanel" to="." method="_on_PanelContainer_resized"]
